增加注册密码加密功能,md5和hashers两种方法

--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -11,7 +11,7 @@
 </div>
 {% endif %}
 
-<form class="form-horizontal" method="POST" action="/user/login/">
+<form class="form-horizontal" method="POST" action="/user/login_in/">
     {% csrf_token %}
     <div class="form-group">
         <label class="col-sm-2 control-label">昵称</label>
