--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -22,10 +22,10 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if request.session.uid %}
                 <li><a>Hello, {{request.session.nickname}}</a></li>
-                <li><a href="/user/logout/">退出</a></li>
+                <li><a href="/user/loginout/">退出</a></li>
                 {% else %}
                 <li><a href="/user/register/">注册</a></li>
-                <li><a href="/user/login/">登陆</a></li>
+                <li><a href="/user/login_in/">登陆</a></li>
                 {% endif %}
             </ul>
         </div>
