--- a/post/templates/base.html
+++ b/post/templates/base.html
@@ -36,10 +36,10 @@
         <div class="col-md-4">
             <div class="well">
                 <h4>热门文章</h4>
-                <iframe src ="/post/top10/" frameborder="0" id="iFrame1" name="iFrame1"
+                <!-- <iframe src ="/post/top10/" frameborder="0" id="iFrame1" name="iFrame1"
                         onload="this.height=iFrame1.document.body.scrollHeight">
                 <p>Your browser does not support iframes.</p>
-                </iframe>
+                </iframe> -->
             </div>
         </div>
     </div>
